--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+*.xcuserstate
+project.xcworkspace
+xcuserdata
+UserInterfaceState.xcuserstate
 
 ## Obj-C/Swift specific
 *.hmap
